At least now it builds under Visual Studio 2010 and not Visual C++ 4.0 (circa 1999)

--- a/Sekaiju.ini
+++ b/Sekaiju.ini
@@ -104,9 +104,9 @@
 Iconic=0
 Zoomed=0
 X=6
-Y=6
+Y=5
 Width=1007
-Height=726
+Height=727
 [GeneralOption]
 EnableMultiExec=0
 EnableMultiOpen=1
@@ -251,4 +251,4 @@ DisableWhileRecording=1
 [LastOpenFileName]
 File1=
 [Language]
-Language=Japanese
+Language=English
